--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ hr {
   padding: 0;
   margin: 35px 0 0 0;
   background: rgba(0,0,0,0.20);
-  background: -moz-linear-gradient(left center, rgba(165, 69, 243, 0.0) rgba(165, 69, 243, 0.33) 50%, rgba(165, 69, 243, 0.0));
+  background: -moz-linear-gradient(left center, rgba(39,174,96,1) rgba(39,174,96,1) 50%, rgba(165, 69, 243, 0.0));
   background: -webkit-gradient(linear, left top, right top, from(rgba(165, 69, 243, 0.0)), color-stop(0.5, rgba(165, 69, 243, 0.33)), to(rgba(165, 69, 243, 0.0)));
 }
 ul {
